[package]
name = "leptab"
version = "0.1.1"
authors = ["kodecraft-mark"]
edition = "2021"
description = "A data table for leptos with back end support, styled by tailwindcss"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kodecraft-mark/leptab"

[dependencies]
leptos = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
web-sys = { version = "0.3", features = ["Blob", "BlobPropertyBag"]}
wasm-bindgen = "0.2"